# gpudirect

./: .gitignore  .gitpod.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.debug.yml  main.cpp
include/gpd/: gpd.h
src/gpd/: gpd.cpp
